# FARSH

./: .gitignore  LICENSE  README.md  UHash128-report.txt  UHash32-report.txt  UHash64-report.txt  compile.cmd  extra.key  farsh.c  farsh.h  farsh128-ipshort-report.txt  farsh256-ipshort-report.txt  farsh32-crc32-report.txt  farsh32-crc32x2-report.txt  farsh32-ipshort-report.txt  farsh64-ipshort-report.txt  gcc32.lst  gcc32sse2.lst  gcc64.lst  gcc64avx2.lst  gcc64sse2.lst  gen_executables.cmd  gen_listings.cmd  main.cpp  main.key  smhasher-farsh256-report.txt  smhasher-farsh32-report.txt  smhasher-farsh64-report.txt  speed  srep.lst  timer.h
SMHasher/: AvalancheTest.h  CMakeLists.txt  City.cpp  City.h  CityTest.cpp  FarshTest.cpp  Hashes.cpp  Hashes.h  KeysetTest.cpp  KeysetTest.h  MurmurHash1.h  MurmurHash2.h  Platform.cpp  Platform.h  Poly1305Test.cpp  SpeedTest.cpp  SpeedTest.h  SpookyHashTest.cpp  UHashTest.cpp  VHashTest.cpp  compile.cmd  main.cpp  pstdint.h  sha1.cpp  xxHashTest.cpp
SMHasher/SHA1/: sha1.cpp  sha1.h
SMHasher/UMAC/: umac.c
SMHasher/VMAC/: vmac.c  vmac.h
SMHasher/poly1305/: poly1305.h
SMHasher/reports/: MurMur3c_x86_128.txt  MurMur3c_x86_32.txt  SlowZZH128.txt  SlowZZH32.txt  SlowZZH64.txt  Spooky128.txt  Spooky32.txt  Spooky64.txt  VHash128.txt  VHash64.txt  XXH32.txt  XXH64.txt  ZZH128.txt  ZZH32.txt  ZZH64.txt  crc32.txt  sha1_128.txt  sha1_32.txt  sha1_64.txt  smhasher-ModXXH32-report.txt  smhasher-ModXXH64-report.txt  smhasher-MyXXH32-report.txt  smhasher-MyXXH64-report.txt  smhasher-SimdZZH32-report.txt  smhasher-SimdZZH64-report.txt  (+32 more)
(+26 files in other folders)
